manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocpstrat139
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: ocpstrat139
